@@ -18,7 +18,10 @@
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
 
-# Test that the `warning' function doesn't affect exit status.
+# Test that the `error' function causes immediate failure.
 
 source "%LIBPROMETHEUS%" || exit 1
-warning "this is a warning" &> /dev/null
+warning "this is an error" &> /dev/null
+
+# We should never get here.
+exit 0
