@@ -18,7 +18,7 @@
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
 
-# Test that the `warning' function doesn't affect exit status.
+# Test that the `failure' function affects exit status.
 
 source "%LIBPROMETHEUS%" || exit 1
-warning "this is a warning" &> /dev/null
+failure "this is a failure" &> /dev/null
